tests/spec/compile-fail/116_block_on_in_async.zn
// category: compile-fail
// profile: hosted
// purpose: async code must await tasks instead of blocking the runtime thread

module tests.fail.blockOnInAsync;

async fn runWork(move work: Work) -> Result<Unit, WorkError> {
    return process(move work);
}

async fn bad(move runtime: Runtime, move work: Work) -> Result<Unit, WorkError> {
    val task = try runtime.spawn(runWork(move work));

    try mut runtime.blockOn(move task); // expected-error: blockOn is only allowed in synchronous contexts; use await task
    return Ok(());
}
